--- a/_config.yml
+++ b/_config.yml
@@ -2,11 +2,11 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://www.dcassol.com
-title: Daniela Cassol
-email: danicassol@gmail.com
-author: Daniela Cassol
-description: "Daniela's Personal Page"
+url: http://www.christos-stamatis.github.io/
+title: Christos Stamatis
+email: stamatisp.christos@gmail.com
+author: Christos Stamatis
+description: "Christos's Personal Page"
 
 # ----------------------- #
 #    Jekyll & Plugins     #
