--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://www.christos-stamatis.github.io/
+url: http://christos-stamatis.github.io/
 title: Christos Stamatis
 email: stamatisp.christos@gmail.com
 author: Christos Stamatis
